[gd_scene load_steps=6 format=3 uid="uid://cpvdi7m5kxwsf"]

[ext_resource type="Script" path="res://entities/Collision/Collision.gd" id="1_u178i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_furu5"]
shading_mode = 0
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_7hwfd"]
material = SubResource("StandardMaterial3D_furu5")
radius = 0.125
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y2gkg"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_8f3ig"]
material = SubResource("StandardMaterial3D_y2gkg")
radius = 0.125
height = 0.25

[node name="Collision" type="Node3D"]
script = ExtResource("1_u178i")

[node name="CollisionPoint" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_7hwfd")

[node name="CollisionNormal" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_8f3ig")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
